--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -108,3 +108,13 @@ html {
   line-height: 38px;
   }
   } }
+
+  /* 回复列表 */
+.topic-reply {
+  a {
+  color: inherit;
+  }
+  .meta {
+  font-size: .9em;
+  color: #b3b3b3;
+  } }
