--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -118,3 +118,17 @@ html {
   font-size: .9em;
   color: #b3b3b3;
   } }
+
+
+  /* 消息通知 */
+.notification-badge {
+  .badge {
+  font-size: 12px;
+  margin-top: 14px;
+  }
+  .badge-secondary {
+  background-color: #EBE8E8;
+  }
+  .badge-hint {
+  background-color: #d15b47 !important;;
+  } }
