--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -60,7 +60,7 @@ html {
   } }
 
   /* Topic Index Page */
-.topics-index-page, .categories-show-page{
+.topics-index-page, .categories-show-page, .root-page{
   .topic-list {
     .nav>li>a {
       position: relative;
